fix .footer width from 100% to min-width 375px on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -428,10 +428,8 @@ body {
 .footer {
   justify-content: space-around;
   flex-wrap: nowrap;
-}
-.footer {
-  width: 100%;
-  height: 140px;
+  min-width: 375px;
+  height: 141px;
   background: #252525;
   flex-direction: row;
   align-items: center;
